templates/ingress/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: _DNS_NAME_
  namespace: _NAMESPACE_
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - _DNS_NAME_._DNS_DOMAIN_
    secretName: tls-secret
  rules:
  - host: _DNS_NAME_._DNS_DOMAIN_
    http:
      paths:
      - backend:
          serviceName: _SERVICE_NAME_
          servicePort: _SERVICE_PORT_
        path: /(.*)
